--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                     <div class="footer-wrapper">
                         <div class="">
 							<center>
-                                <p>Copyright © 2020 dhivainfotech - All Rights Reserved.</p>
+                                <p style="color:rgb(0, 117, 193); font-weight: bold;">Copyright © 2020 dhivainfotech - All Rights Reserved.</p>
 							</center>
                         </div>
                         <!-- </div> -->
