--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-left">                    
-                    <a class="" href="#"> <h1 style="color:rgb(0, 117, 193); font-weight: bold;"> <img class="img-circle" src="assets/images/logo.jpg" style="height: 44px;" alt="Logo" /> &nbsp DHIVA INFOTECH PRIVATE LIMITED</h1></a>
+                    <a class="" href="#"> <h1 style="color:rgb(0, 117, 193); font-weight: bold;"> <img class="img-circle" src="assets/images/logo.png" style="height: 44px;" alt="Logo" /> &nbsp DHIVA INFOTECH PRIVATE LIMITED</h1></a>
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
